[vnext]
- If stub is executed, return "X-HttPlaceholder-ExecutedStub" header with stub ID (https://github.com/dukeofharen/httplaceholder/pull/269).
- Show the configuration as "read only" values in the user interface (https://github.com/dukeofharen/httplaceholder/issues/261).

[2022.9.3]
- Fixed link to API docs (https://github.com/dukeofharen/httplaceholder/pull/256).
- The YAML file stub contents are no longer logged when there are any YAML stub files and the logging is set to verbose (https://github.com/dukeofharen/httplaceholder/pull/256).
- When setting verbose logging on with environment variable, it now also logs the configuration (https://github.com/dukeofharen/httplaceholder/pull/256).
- Removed .NET client doc generation. Not that interesting, we already have an example project and the code is already documented for anyone interested (https://github.com/dukeofharen/httplaceholder/pull/256).
- Make it possible to select multiple examples when you are inserting a variable parsing handler in the stub response (https://github.com/dukeofharen/httplaceholder/issues/262).
- Make it possible to insert fake data in the stub response using [Bogus](https://github.com/bchavez/Bogus) (https://github.com/dukeofharen/httplaceholder/issues/72).
- Update UI whenever a scenario is added, updated or deleted (https://github.com/dukeofharen/httplaceholder/issues/259).
- Added 3 more string checker options: minlength, maxlength and exactlength (https://github.com/dukeofharen/httplaceholder/issues/257).
- Add response option to return "connection reset" (https://github.com/dukeofharen/httplaceholder/issues/258).
- Added extra options to "extra duration" response writer so a "min" and "max" value can be provided (https://github.com/dukeofharen/httplaceholder/issues/260).

# BREAKING CHANGES
- Minor one, but the YAML file stub contents are no longer logged when there are any YAML stub files and the logging is set to verbose.

[2022.8.7]